--- a/suffixtree/Cargo.toml
+++ b/suffixtree/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
 umgap = "1.0.0"
+tsv-utils = { path = "../tsv-utils"}
