--- a/tsv-utils/Cargo.toml
+++ b/tsv-utils/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "suffixarray"
+name = "tsv-utils"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cdivsufsort = "2.0.0"
-clap = { version = "4.4.8", features = ["derive"] }
-divsufsort = "2.0.0"
-tsv-utils = { path = "../tsv-utils"}
