--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -13,3 +13,4 @@ get-size = "0.1.4"
 libdivsufsort-rs = "0.1.0"
 tsv-utils = { path = "../tsv-utils"}
 umgap = "1.0.0"
+libsais64-rs = {path = "../libsais64-rs"}
