--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 clap = { version = "4.4.8", features = ["derive"] }
 get-size = "0.1.4"
 libdivsufsort-rs = "0.1.0"
-tsv-utils = { path = "../tsv-utils"}
-umgap = "1.0.0"
-libsais64-rs = {path = "../libsais64-rs"}
+tsv-utils = { path = "../tsv-utils" }
+umgap = { path = "/Users/brdvlami/Documents/Ugent/MA2/Thesis/ReferenceImplementations/umgap" }
+libsais64-rs = { path = "../libsais64-rs" }
