--- a/tsv-utils/Cargo.toml
+++ b/tsv-utils/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-umgap = "1.0.0"
+umgap = { path = "/Users/brdvlami/Documents/Ugent/MA2/Thesis/ReferenceImplementations/umgap" }
