--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -12,3 +12,4 @@ libdivsufsort-rs = "0.1.0"
 tsv-utils = { path = "../tsv-utils" }
 umgap = { path = "/Users/brdvlami/Documents/Ugent/MA2/Thesis/ReferenceImplementations/umgap" }
 libsais64-rs = { path = "../libsais64-rs" }
+rayon = "1.8.1"
