use new umgap version that includes threadsafe aggregator

--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -10,6 +10,6 @@ clap = { version = "4.4.8", features = ["derive"] }
 get-size = "0.1.4"
 libdivsufsort-rs = "0.1.0"
 tsv-utils = { path = "../tsv-utils" }
-umgap = { path = "/Users/brdvlami/Documents/Ugent/MA2/Thesis/ReferenceImplementations/umgap" }
+umgap = "1.1.0"
 libsais64-rs = { path = "../libsais64-rs" }
 rayon = "1.8.1"
