--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -13,3 +13,4 @@ tsv-utils = { path = "../tsv-utils" }
 umgap = "1.1.0"
 libsais64-rs = { path = "../libsais64-rs" }
 rayon = "1.8.1"
+serde = { version = "1.0.197", features = ["derive"] }
