make separate builder executable to save memory

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ members = [
     "suffixarray",
     "tsv-utils",
     "libsais64-rs"
-, "suffixarray_server"]
+, "suffixarray_server", "suffixarray_builder"]
