--- a/suffixarray_server/Cargo.toml
+++ b/suffixarray_server/Cargo.toml
@@ -13,3 +13,4 @@ suffixarray = { path = "../suffixarray" }
 clap = { version = "4.5.1", features = ["derive"] }
 rayon = "1.8.1"
 tsv-utils = { path = "../tsv-utils"}
+suffixarray_builder = { path = "../suffixarray_builder" }
