--- a/suffixarray_server/Cargo.toml
+++ b/suffixarray_server/Cargo.toml
@@ -14,3 +14,4 @@ clap = { version = "4.5.1", features = ["derive"] }
 rayon = "1.8.1"
 tsv-utils = { path = "../tsv-utils"}
 suffixarray_builder = { path = "../suffixarray_builder" }
+sa-mappings = { path = "../sa-mappings" }
