--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ members = [
     "tsv-utils",
     "libsais64-rs",
     "suffixarray_server",
-    "suffixarray_builder"
+    "suffixarray_builder",
+
+    "fa-compression",
+    "sa-mappings"
 ]
