--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -12,3 +12,4 @@ umgap = "1.1.0"
 rayon = "1.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 suffixarray_builder = { path = "../suffixarray_builder" }
+sa-mappings = { path = "../sa-mappings" }
