--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -13,3 +13,5 @@ rayon = "1.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 suffixarray_builder = { path = "../suffixarray_builder" }
 sa-mappings = { path = "../sa-mappings" }
+futures = "0.3.30"
+serde_json = "1.0.116"
