--- a/suffixarray_builder/Cargo.toml
+++ b/suffixarray_builder/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.4.8", features = ["derive"] }
 tsv-utils = { path = "../tsv-utils" }
 libsais64-rs = { path = "../libsais64-rs" }
 libdivsufsort-rs = "0.1.0"
+sa-mappings = { path = "../sa-mappings" }
