--- a/sa-mappings/Cargo.toml
+++ b/sa-mappings/Cargo.toml
@@ -14,3 +14,5 @@ bytelines = "2.5.0"
 umgap = "1.1.0"
 serde_json = "1.0.115"
 serde = { version = "1.0.197", features = ["derive"] }
+get-size = { version = "^0.1", features = ["derive"] }
+
