--- a/suffixarray/Cargo.toml
+++ b/suffixarray/Cargo.toml
@@ -15,3 +15,5 @@ suffixarray_builder = { path = "../suffixarray_builder" }
 sa-mappings = { path = "../sa-mappings" }
 futures = "0.3.30"
 serde_json = "1.0.116"
+get-size = { version = "^0.1", features = ["derive"] }
+
